--- a/implementations/Haskell/fizzbuzz/fizzbuzz.cabal
+++ b/implementations/Haskell/fizzbuzz/fizzbuzz.cabal
@@ -6,24 +6,16 @@ cabal-version: 1.12
 
 name:           fizzbuzz
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/fizzbuzz#readme>
-homepage:       https://github.com/githubuser/fizzbuzz#readme
-bug-reports:    https://github.com/githubuser/fizzbuzz/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2021 Author name here
+author:         Eli Kogan-Wang
+maintainer:     Eli Kogan-Wang
+copyright:      2021 Eli Kogan-Wang
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
-    ChangeLog.md
 
-source-repository head
-  type: git
-  location: https://github.com/githubuser/fizzbuzz
-
-executable fizzbuzz-exe
+executable fizzbuzz
   main-is: Main.hs
   other-modules:
       Paths_fizzbuzz
